# MeDAL

./: .gitignore  pyproject.toml  requirements.txt
medal/: __init__.py
